--- a/roomfinder/Base.lproj/Main.storyboard
+++ b/roomfinder/Base.lproj/Main.storyboard
@@ -105,6 +105,7 @@
                             <constraint firstItem="sL9-v1-3AR" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="wSV-lT-wCm"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="K5F-1D-Vei"/>
                     <connections>
                         <outlet property="levelPicker" destination="sL9-v1-3AR" id="fhf-85-VpR"/>
                         <outlet property="mapView" destination="IgS-LO-u88" id="VA8-Ts-RWb"/>
