--- a/roomfinder/Base.lproj/Main.storyboard
+++ b/roomfinder/Base.lproj/Main.storyboard
@@ -84,8 +84,8 @@
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="QR Scanner"/>
                                 <buttonConfiguration key="configuration" style="filled" image="qrcode.viewfinder" catalog="system" title="">
-                                    <color key="baseForegroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <color key="baseBackgroundColor" name="LevelStroke"/>
+                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="baseBackgroundColor" name="LevelPickerSelected"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <segue destination="YZf-8O-ZsI" kind="show" destinationCreationSelector="scanView:" id="G0V-hn-mlY"/>
@@ -132,9 +132,6 @@
         <image name="qrcode.viewfinder" catalog="system" width="128" height="115"/>
         <namedColor name="LevelPickerSelected">
             <color red="0.81599998474121094" green="0.81599998474121094" blue="0.81599998474121094" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="LevelStroke">
-            <color red="0.74509803921568629" green="0.74509803921568629" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
