--- a/roomfinder/Base.lproj/Main.storyboard
+++ b/roomfinder/Base.lproj/Main.storyboard
@@ -59,24 +59,10 @@
                                 </connections>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hVi-23-1Td">
-                                <rect key="frame" x="0.0" y="532" width="375" height="50"/>
+                                <rect key="frame" x="0.0" y="648" width="375" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="QxL-oJ-Ocu">
-                                <rect key="frame" x="0.0" y="590" width="375" height="180"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="wRy-3U-g1E">
-                                        <rect key="frame" x="0.0" y="50" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wRy-3U-g1E" id="cRx-JT-RUm">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oh9-Ur-EHV">
                                 <rect key="frame" x="16" y="47" width="45" height="45"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -91,26 +77,41 @@
                                     <segue destination="YZf-8O-ZsI" kind="show" destinationCreationSelector="scanView:" id="G0V-hn-mlY"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dbc-lJ-YzU">
+                                <rect key="frame" x="121" y="727" width="133" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="tintColor"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Get Directions" cornerStyle="capsule">
+                                    <backgroundConfiguration key="background" strokeOutset="8">
+                                        <color key="backgroundColor" systemColor="linkColor"/>
+                                        <color key="strokeColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </backgroundConfiguration>
+                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="getDirectionsButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1j1-IV-Uyp"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="IgS-LO-u88" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="5AM-Mc-pBY"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="QxL-oJ-Ocu" secondAttribute="bottom" constant="8" id="ALd-Bm-Djr"/>
                             <constraint firstItem="IgS-LO-u88" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="HML-AJ-EIs"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sL9-v1-3AR" secondAttribute="trailing" constant="20" id="JEj-Iv-x5B"/>
                             <constraint firstItem="IgS-LO-u88" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="VLN-zd-dko"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="QxL-oJ-Ocu" secondAttribute="bottom" constant="8" id="Zg7-it-aHo"/>
                             <constraint firstItem="IgS-LO-u88" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="pqa-kL-E9C"/>
                             <constraint firstItem="sL9-v1-3AR" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="wSV-lT-wCm"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="K5F-1D-Vei"/>
                     <connections>
+                        <outlet property="getDIrectionsButton" destination="dbc-lJ-YzU" id="tbR-Eo-lFG"/>
                         <outlet property="levelPicker" destination="sL9-v1-3AR" id="fhf-85-VpR"/>
                         <outlet property="mapView" destination="IgS-LO-u88" id="VA8-Ts-RWb"/>
                         <outlet property="searchContainerView" destination="hVi-23-1Td" id="des-R2-ZU5"/>
-                        <outlet property="tableView" destination="QxL-oJ-Ocu" id="KiH-tR-Psr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -133,8 +134,11 @@
         <namedColor name="LevelPickerSelected">
             <color red="0.81599998474121094" green="0.81599998474121094" blue="0.81599998474121094" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
