--- a/roomfinder/Base.lproj/Main.storyboard
+++ b/roomfinder/Base.lproj/Main.storyboard
@@ -94,6 +94,13 @@
                                     <segue destination="lYr-5c-1aL" kind="show" destinationCreationSelector="directionsButtonTapped:" id="qlc-Ak-8qM"/>
                                 </connections>
                             </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="No rooms matching your search were found." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QSk-oY-vX4">
+                                <rect key="frame" x="7" y="619" width="360" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <color key="textColor" systemColor="systemRedColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -108,6 +115,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="K5F-1D-Vei"/>
                     <connections>
+                        <outlet property="errorMessage" destination="QSk-oY-vX4" id="Ngm-0K-POc"/>
                         <outlet property="getDIrectionsButton" destination="dbc-lJ-YzU" id="tbR-Eo-lFG"/>
                         <outlet property="levelPicker" destination="sL9-v1-3AR" id="fhf-85-VpR"/>
                         <outlet property="mapView" destination="IgS-LO-u88" id="VA8-Ts-RWb"/>
@@ -204,6 +212,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="tintColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
